--- a/bootstrap_gallery_app.html
+++ b/bootstrap_gallery_app.html
@@ -151,10 +151,96 @@
       </div>
     </div>
 
+    <!-- Progress Bar -->
+    <div class="section mb-4">
+      <h5>Barra de Progreso</h5>
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70"
+          aria-valuemin="0" aria-valuemax="100">70%</div>
+      </div>
+    </div>
+
+    <!-- Spinners -->
+    <div class="section mb-4">
+      <h5>Spinners</h5>
+      <div class="d-flex gap-3 align-items-center">
+        <div class="spinner-border text-primary" role="status"></div>
+        <div class="spinner-grow text-success" role="status"></div>
+      </div>
+    </div>
+
+    <!-- Tooltips -->
+    <!-- Para que funcione adecuadamente se deberá copiar y pegar el script
+    que se encuentra al final de este ejemplo -->
+    <div class="section mb-4">
+      <h5>Tootips</h5>
+      <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top"
+        title="Este es un tooltip">Pasa el cursor</button>
+    </div>
+
+    <!-- Toasts -->
+    <div class="section mb-4">
+      <h5>Toasts</h5>
+      <button class="btn btn-primary" onclick="bootstrap.Toast.getOrCreateInstance(document.getElementById('basicToast')).show();">Mostrar Toast</button>
+      <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="basicToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <strong class="me-auto">Notificación</strong>
+            <small>Justo ahora</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+          </div>
+          <div class="toast-body">
+            Esto es un toast de Bootstrap.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Pagination -->
+    <div class="section mb-4">
+      <h5>Paginación</h5>
+      <nav>
+        <ul class="pagination">
+          <li class="page-item disabled"><a class="page-link" href="#">Anterior</a></li>
+          <li class="page-item active"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">Siguiente</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <!-- List Group -->
+    <div class="section mb-4">
+      <h5>Lista de elementos</h5>
+      <ul class="list-group">
+        <li class="list-group-item">Elemento 1</li>
+        <li class="list-group-item active">Elemento activo</li>
+        <li class="list-group-item">Elemento 3</li>
+      </ul>
+    </div>
+
+    <!-- Breadcrumb -->
+    <div class="section mb-4">
+      <h5>Breadcrumb</h5>
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+          <li class="breadcrumb-item"><a href="#">Sección</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Actual</li>
+        </ol>
+      </nav>
+    </div>
   </div>
+
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+  <!-- ESTE SCRIPT SE DEBE AGREGAR SI SE USA UN TOOLTIP -->
+  <script>
+    const tooltipTriggerList = [...document.querySelectorAll('[data-bs-toggle="tooltip"]')];
+    tooltipTriggerList.forEach(tooltipTriggerEl => {
+      new bootstrap.Tooltip(tooltipTriggerEl);
+    });
+  </script>
 </body>
 </html>
